# local-in

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pom.xml
.github/workflows/: build.yml
.sisyphus/run-continuation/: ses_145a391b0ffecpLAiRyuKn7Ug1.json
.superpowers/brainstorm/78016-1781241829/content/: overview.html  question2.html  question3.html  question4-ui-v2.html  question4-ui.html  question5-icon.html  ui-v3-design-system.html
.superpowers/brainstorm/78016-1781241829/state/: server-stopped
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/db/: mod.rs
src-tauri/src/file/: mod.rs
src-tauri/src/p2p/: file_transfer.rs  mod.rs
src/components/: Icons.tsx  LoginScreen.tsx  MembersPanel.tsx  Sidebar.tsx
src/components/chat/: ChatArea.tsx  ChatHeader.tsx  FileCard.tsx  InputArea.tsx  MessageBubble.tsx
src/components/modals/: CreateGroupModal.tsx  JoinGroupModal.tsx  SettingsModal.tsx
src/hooks/: useChat.ts
src/main/java/: module-info.java
src/main/java/wang/xiaorui/local/: LocalInApplication.java  MFXDemoResourcesLoader.java
src/main/java/wang/xiaorui/local/constants/: Constants.java
src/main/java/wang/xiaorui/local/controllers/: LocalInController.java  OnlineChatController.java  OnlineUserController.java  PersonalChatController.java
src/main/java/wang/xiaorui/local/founder/: LocalInPeerFounder.java
src/main/java/wang/xiaorui/local/handler/: FXMLLoaderHandler.java  LocalInMessageConstants.java  LocalInMessageForwarder.java  MessageBuilderHandler.java  MessageCache.java  PersonalMessageHandler.java  PersonalMessageObserver.java
src/main/java/wang/xiaorui/local/p2p/: P2PServer.java
src/main/java/wang/xiaorui/local/server/: ConnectionCache.java  (+6 more)
src/styles/: tokens.css
(+24 files in other folders)
