[package]
name = "local-in"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "mdns", "gossipsub", "request-response", "tokio", "macros"] }
futures = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
